--- a/public/css/styleResultPage.css
+++ b/public/css/styleResultPage.css
@@ -256,15 +256,13 @@ a:hover
 }
 .result > .number
 {
-	float: left;
 	font-size: 15px;
 	line-height:1;	
+	text-align: right;
 }
 
 .result > .resultInformation
 {
-	margin-left: 40px;
-  	padding-left: 10px;
   	border-radius: 5px;
 }
 .result .title
